benchmark/results/TEST-ROWS/9/df_pandas_executor/8000ROWS/RUN2/run.log
<<<<<<< HEAD
Traceback (most recent call last):
  File "/Users/eve/Desktop/S/6.5/forms/benchmark/test_driver.py", line 8, in <module>
    import forms as fs
  File "/Users/eve/Desktop/S/6.5/forms/forms/__init__.py", line 17, in <module>
    from forms.core.forms import compute_formula, config, print_spreadsheet_view
  File "/Users/eve/Desktop/S/6.5/forms/forms/core/forms.py", line 27, in <module>
    from forms.utils.executors import create_executor_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/utils/executors.py", line 16, in <module>
    from forms.executor.dfexecutor.planexecutor import DFPlanExecutor
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/dfexecutor/planexecutor.py", line 24, in <module>
    from forms.executor.planexecutor import PlanExecutor
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/planexecutor.py", line 21, in <module>
    from forms.scheduler.utils import create_scheduler_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/utils.py", line 19, in <module>
    from forms.scheduler.dfscheduler.dfscheduler import DFSimpleScheduler, PrioritizedScheduler
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/dfscheduler/dfscheduler.py", line 20, in <module>
    from forms.scheduler.dfscheduler.phase import create_phase_by_name
  File "/Users/eve/Desktop/S/6.5/forms/forms/scheduler/dfscheduler/phase.py", line 21, in <module>
    from forms.executor.dfexecutor.utils import remote_access_planning
  File "/Users/eve/Desktop/S/6.5/forms/forms/executor/dfexecutor/utils.py", line 229
    start_idx =
               ^
SyntaxError: invalid syntax
=======
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:778: RuntimeWarning: divide by zero encountered in double_scalars
  return 1 / x_new - 1
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: divide by zero encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
/Users/eve/opt/anaconda3/envs/forms/lib/python3.10/site-packages/numpy/polynomial/polynomial.py:754: RuntimeWarning: invalid value encountered in double_scalars
  c0 = c[-1] + x*0
/Users/eve/Desktop/S/6.5/numpy-financial/numpy_financial/_financial.py:776: RuntimeWarning: invalid value encountered in double_scalars
  x_new = x - (npv_(x) / d_npv(x))
Distributing data time: 0.6945569515228271
submit_one_func 0.3077409267425537
submit_one_func 0.000782012939453125
submit_one_func 0.0010640621185302734
submit_one_func 0.0012331008911132812
submit_one_func 0.0008029937744140625
submit_one_func 0.0005743503570556641
submit_one_func 0.0005888938903808594
submit_one_func 0.0005922317504882812
submit_one_func 0.0005309581756591797
submit_one_func 0.0009059906005859375
submit_one_func 0.0005431175231933594
submit_one_func 0.0005271434783935547
Execution time: 1.2399342060089111
Get table content time: 0.04180312156677246
Get table content time: 0.17534804344177246
Get table content time: 0.402040958404541
Get table content time: 0.1452469825744629
Get table content time: 0.587993860244751
Get table content time: 0.17305994033813477
Get table content time: 0.1720447540283203
Get table content time: 0.1616661548614502
Get table content time: 0.7388620376586914
Get table content time: 0.7360360622406006
Get table content time: 0.7390751838684082
Get table content time: 0.17125320434570312
Get table content time: 0.4574611186981201
>>>>>>> df919a2c2abd8825d2dfa1628ca8da49051bf6c3
